# BMSTU-IU9

./: README.md
ADS/: README.md
Bioinformatic/: README.md
Bioinformatic/lab1/: README.md
Bioinformatic/lab2/: README.md
Bioinformatic/lab3/: README.md
Compilers/: README.md
Compilers/lab1/: review1.md
Compilers/lab1.2/: main.go  test.txt
Compilers/lab1.3/: compiler.go  go.mod  tokens.go
Compilers/lab1.4/: compiler.go  fragment.go  go.mod  tag.go
Compilers/lab1.5/: lab6.l  review.md  run.sh  test1.txt
Compilers/lab2/: go.mod
Compilers/lab2.1/: review.md
Compilers/lab2.2/: main.py  review.md  test.txt
Compilers/lab2.3/: compiler.go  fragment.go  go.mod  main.go  node.go  parser.go  position.go  review.md  scanner.go  test.txt  tokens.go
Compilers/lab2.4/: go.mod  lexer_test.txt  main.go  node.go  parser.go  position.go  review.md  scanner.go  tag.go  test.txt
Compilers/lab3/: go.mod  review.md
Compilers/lab3.1/: calculator_grammar.txt  go.mod  grammar.go  main.go  parser.go  parsing_table_gen.go  position.go  review.md  scanner.go  table_generator.go  tag.go  test1.txt
Compilers/lab3.2/: lexer.h  lexer.l  need_format.txt  parser.y  review.md  run.sh  test.txt
Compilers/lab3.3/: main.py  review.md  test.txt
Compilers/lab4/: main.go  position.go  scanner.go  tag.go  test.txt
Compilers/lab5/: automata.go  main.go  position.go  review.md  scanner.go  test.txt  tokens.go
ComputerGraphics/: README.md  lab2.py  lab3.py  lab4.py  lab5.py  lab6.py  lab7.py  lab8.py
Databases/: README.md  lab_11_Okutin.sql  lab_13_Okutin.sql  lab_14_Okutin.sql  lab_15_Okutin.sql  lab_1_Okutin.docx  lab_2_Okutin.docx  lab_3_Okutin.docx  lab_4_Okutin.docx  lab_5_Okutin.sql  lab_6_Okutin.sql  lab_7_Okutin.sql  lab_8_Okutin.sql  lab_9_Okutin.sql
Databases/lab10/: lab_10_Okutin.sql  lab_10_Okutin_1.sql  lab_10_Okutin_2.sql
Databases/lab12/: app.config  app.config:Zone.Identifier  lab12.cs  lab12.cs:Zone.Identifier  lab12.csproj  lab12.csproj:Zone.Identifier
DescreteMaths/: README.md
DescreteMaths/1 module/: add.go  econom.go  gauss.go  polish.go  qsort.go  utf8.go
DescreteMaths/2 module/: BridgeNum.go  Dividers.go  EqDist.go  GraphBase.go  Ideal.go  Kruskal.go  Loops.go  MapRoute.go  MaxComponent.go  Prim.go
DescreteMaths/3 module/: Canonic.go  DetRec.go  EqMealy.go  LangMealy.go  Mealy2Moore.go  MinMealy.go  VisMealy.go
Functional Programming (master)/lab1/: lab1.rkt  review1.md
Functional Programming (master)/lab2/: lab2-2.rkt  lab2.rkt  review2.md
Functional Programming (master)/lab3/: lab3_1.hs  lab3_2.hs  review3.md
Functional Programming (master)/lab4/: lab4.hs  review4.md
Functional Programming (master)/lab5/: lab5.hs  review5.md
InformaticBasics/: README.md
LowLevelProgramming/: README.md  lab1.asm  lab2.asm  lab3.asm
LowLevelProgramming/lab4/: lab4.asm  lab4.inc
MobileDev/: README.md
MobileDev/fly2/: main.dart
MobileDev/fly3/: main.dart
MobileDev/lab1/: README.md
MobileDev/lab11/: main.dart
MobileDev/lab11_1/: README.md  pubspec.yaml
MobileDev/lab2/: main.dart
MobileDev/lab3/: main.dart  server.dart
MobileDev/lab4/: main.dart
MobileDev/lab5/: main.dart
MobileDev/lab6/: main.dart
MobileDev/lab9/: README.md  pubspec.yaml
MobileDev/lab9_2/: .metadata  pubspec.yaml
MobileDev/rk1/: main.dart
Modeling/: README.md
Modeling/lab1/: lab0_modeling_latex-2.textClipping
NMLA/: README.md
Networks/: README.md
NeuralNetworks/: README.md
Numeric methods/: README.md
OFP/: README.md
OperatingSystems/: README.md
Optimal Code Generation/: README.md
Optimal Code Generation/lab2/: CMakeLists.txt  main.cpp
Optimal Code Generation/lab3/: CMakeLists.txt  main.cpp  test.txt
Optimization/: README.md
ParallelProgramming/: README.md
ProgrammingLanguages/: README.md
TFL/: README.md
TFL/lab1/: run.sh  (+6 more)
TFL/lab2/: .gitignore  CMakeLists.txt  Makefile  README.md  console.cpp  grammar_history  main.cpp
TFL/lab2/project/: CMakeLists.txt
TFL/lab2/project/include/: RegexGenerator.h  StateMachine.h  StringGenerator.h
TFL/lab2/project/include/parser/: big_tree.hpp  parser2.hpp  small_tree.hpp  tset.hpp
TFL/lab2/project/include/pcre2/: pcre2.h
TFL/lab2/project/src/: RegexGenerator.cpp  StateMachine.cpp  StringGenerator.cpp
TFL/lab2/project/src/parser/: big_tree.cpp  parser.cpp  small_tree.cpp  tset.cpp
TFL/lab2/test/: CMakeLists.txt
TFL/lab3/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
TFL/lab3/project/: CMakeLists.txt
TFL/lab3/project/include/: Constant.h  EquivalenceClassesTable.h  IMAT.h  MATMockDYCK.h  MATMockPalindrome.h  MATMockRegex.h  MainAlgorithm.h  StateMachine.h
TFL/lab3/project/include/parser/: big_tree.hpp  parser2.hpp  small_tree.hpp  tset.hpp
TFL/lab3/project/src/: EquivalenceClassesTable.cpp  MATMockDICK.cpp  MATMockPalindrome.cpp  MATMockRegex.cpp  MainAlgorithm.cpp  StateMachine.cpp
TFL/lab3/project/src/parser/: big_tree.cpp  parser2.cpp  small_tree.cpp  tset.cpp
TFL/lab5/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yaml  main.cpp
TFL/lab5/grammars/: arith_grammar.txt  ext_nformal_grammar.txt  nformal_grammar.txt  simple_grammar.txt
TFL/lab5/project/: CMakeLists.txt
TFL/lab5/project/include/: Forest.h  GSS.h  Grammar.h  LRParser.h  SLRTable.h
TFL/lab5/project/src/: GSS.cpp  Grammar.cpp  LRParser.cpp  SLRTable.cpp
(+284 files in other folders)
